[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "*"
cfg-if = "1.0.0"
thiserror = "1.0.43"
tempfile = "3"
smallvec = "1.11.0"
base_event_token_derive = { path = "base_event_token_derive", version = "*" }