[package]
name = "base_event_token_derive"
version = "0.1.0"
edition = "2021"
include = ["*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "event_token_derive.rs"

[dependencies]
proc-macro2 = "^1"
quote = "^1"
syn = "^1"

